# rust-db-manager

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  result  rust-db-manager.desktop
.github/workflows/: build.yml  release.yml
docs/: KEYBINDINGS.md  OPTIMIZATION_PLAN.md
examples/: test_connection.rs
nix/: package.nix
packaging/copr/: README.md  gridix.spec
packaging/flatpak/: README.md  io.github.mcb_smart_boy.Gridix.yaml
packaging/nix/: package.nix
src/: app.rs  lib.rs  main.rs  prelude.rs
src/app/: database.rs  dialogs.rs  export.rs  import.rs  keyboard.rs  message.rs  mod.rs  state.rs
src/core/: autocomplete.rs  config.rs  constants.rs  export.rs  formatter.rs  history.rs  keybindings.rs  mod.rs  notification.rs  progress.rs  session.rs  syntax.rs  theme.rs
src/database/: config.rs  connection.rs  driver.rs  error.rs  mod.rs  pool.rs  query.rs  ssh_tunnel.rs  types.rs
src/database/query/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
src/ui/: mod.rs  styles.rs
src/ui/components/: mod.rs  notifications.rs  progress_indicator.rs  query_tabs.rs  search_bar.rs  sql_editor.rs  toolbar.rs  welcome.rs
src/ui/components/er_diagram/: layout.rs  mod.rs  render.rs  state.rs
src/ui/components/grid/: actions.rs  filter.rs  keyboard.rs  mod.rs  mode.rs  render.rs  state.rs
src/ui/components/grid/filter/: cache.rs  condition.rs  logic.rs  mod.rs  operators.rs  quick_filter.rs  ui.rs
src/ui/dialogs/: about_dialog.rs  common.rs  confirm_dialog.rs  connection_dialog.rs  create_db_dialog.rs  create_user_dialog.rs  ddl_dialog.rs  dialog_trait.rs  export_dialog.rs  help_dialog.rs  import_dialog.rs  keybindings_dialog.rs  keyboard.rs  mod.rs
src/ui/panels/: history_panel.rs  mod.rs  sidebar.rs
src/ui/panels/sidebar/: actions.rs  connection_list.rs  database_list.rs  mod.rs  state.rs  table_list.rs  trigger_panel.rs
tests/: autocomplete_tests.rs  core_tests.rs  database_tests.rs  ddl_dialog_tests.rs  ddl_tests.rs  export_tests.rs  formatter_tests.rs  grid_tests.rs  ssh_tests.rs  syntax_tests.rs  ui_components_tests.rs  ui_dialogs_tests.rs  ui_tests.rs
