[package]
name = "rust-db-manager"
version = "0.2.0"
edition = "2021"
description = "跨平台数据库管理工具，支持 SQLite/PostgreSQL/MySQL"
authors = ["Your Name"]
license = "MIT"
repository = "https://github.com/yourname/rust-db-manager"
keywords = ["database", "gui", "sqlite", "postgresql", "mysql"]
categories = ["database", "gui"]

[dependencies]
# GUI 框架 (升级到 0.29)
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence"
] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }

# 异步运行时
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "process"] }

# 数据库驱动
rusqlite = { version = "0.31", features = ["bundled"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
mysql_async = { version = "0.34", default-features = false, features = ["default"] }

# SSH 隧道支持
russh = "0.45"
russh-keys = "0.45"
async-trait = "0.1"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# SQL 语法高亮 (syntect)
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }

# 数据导入
csv = "1.3"

# 工具库
thiserror = "1.0"
rfd = "0.14"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
base64 = "0.22"
regex = "1.12"
ring = { version = "0.17", features = ["std"] }
hostname = "0.4"
uuid = { version = "1.0", features = ["v4"] }
parking_lot = "0.12"
once_cell = "1.19"

[dev-dependencies]
# 测试框架
tokio-test = "0.4"
tempfile = "3.10"
pretty_assertions = "1.4"

[profile.release]
opt-level = "z"     # 优化体积
lto = true          # 链接时优化
strip = true        # 移除符号
panic = "abort"     # 精简 panic 代码
codegen-units = 1   # 更好的优化

[profile.dev]
opt-level = 1       # 开发时轻度优化，加快编译

[package.metadata.appimage]
assets = ["icon.png"]
auto_link = true
auto_link_exclude_list = [
    "libc.so*",
    "libdl.so*",
    "libpthread.so*",
    "libm.so*",
    "libgcc_s.so*",
    "librt.so*",
    "ld-linux-x86-64.so*",
]
