[package]
name = "gridix"
version = "1.1.0"
edition = "2024"
description = "跨平台数据库管理工具，支持 SQLite/PostgreSQL/MySQL"
authors = ["MCB-SMART-BOY"]
license = "MIT"
repository = "https://github.com/MCB-SMART-BOY/gridix"
keywords = ["database", "gui", "sqlite", "postgresql", "mysql"]
categories = ["database", "gui"]

# =============================================================================
# 依赖项 - 按功能分组
# =============================================================================

[dependencies]

# -----------------------------------------------------------------------------
# GUI 框架
# -----------------------------------------------------------------------------
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
    "x11",
    "wayland"
] }
egui = "0.33"
egui_extras = { version = "0.33", features = ["image"] }

# -----------------------------------------------------------------------------
# 异步运行时
# -----------------------------------------------------------------------------
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "net",
    "io-util",
    "process"
] }

# -----------------------------------------------------------------------------
# 数据库驱动
# -----------------------------------------------------------------------------
rusqlite = { version = "0.38", features = ["bundled"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
mysql_async = { version = "0.36", default-features = false, features = ["default"] }

# -----------------------------------------------------------------------------
# SSH 隧道支持
# -----------------------------------------------------------------------------
russh = "0.55"
async-trait = "0.1"

# -----------------------------------------------------------------------------
# 序列化
# -----------------------------------------------------------------------------
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# -----------------------------------------------------------------------------
# 语法高亮
# -----------------------------------------------------------------------------
syntect = { version = "5.3", default-features = false, features = ["default-fancy"] }

# -----------------------------------------------------------------------------
# 数据导入导出
# -----------------------------------------------------------------------------
csv = "1"

# -----------------------------------------------------------------------------
# 错误处理
# -----------------------------------------------------------------------------
thiserror = "2"

# -----------------------------------------------------------------------------
# 文件对话框
# -----------------------------------------------------------------------------
rfd = "0.16"

# -----------------------------------------------------------------------------
# 系统工具
# -----------------------------------------------------------------------------
dirs = "6"                      # 配置目录
hostname = "0.4"                # 主机名
chrono = { version = "0.4", features = ["serde"] }  # 日期时间

# -----------------------------------------------------------------------------
# 并发与同步
# -----------------------------------------------------------------------------
lazy_static = "1"
parking_lot = "0.12"
once_cell = "1"

# -----------------------------------------------------------------------------
# 加密与安全
# -----------------------------------------------------------------------------
base64 = "0.22"
ring = { version = "0.17", features = ["std"] }

# -----------------------------------------------------------------------------
# 文本处理
# -----------------------------------------------------------------------------
regex = "1"
uuid = { version = "1", features = ["v4"] }

# =============================================================================
# 开发依赖
# =============================================================================

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
pretty_assertions = "1.4"

# =============================================================================
# 构建配置
# =============================================================================

[profile.release]
opt-level = "z"     # 优化体积
lto = true          # 链接时优化
strip = true        # 移除符号
panic = "abort"     # 精简 panic 代码
codegen-units = 1   # 更好的优化

[profile.dev]
opt-level = 1       # 开发时轻度优化，加快编译

# =============================================================================
# AppImage 打包配置
# =============================================================================

[package.metadata.appimage]
assets = ["gridix.png"]
auto_link = true
auto_link_exclude_list = [
    "libc.so*",
    "libdl.so*",
    "libpthread.so*",
    "libm.so*",
    "libgcc_s.so*",
    "librt.so*",
    "ld-linux-x86-64.so*",
]
